--- a/catalogue/templates/view1.html
+++ b/catalogue/templates/view1.html
@@ -4,25 +4,27 @@
 {% load staticfiles %}
 {% block content %}
 
+  <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/r/bs-3.3.5/jq-2.1.4,dt-1.10.8/datatables.min.css"/>
+  <script type="text/javascript" src="https://cdn.datatables.net/r/bs-3.3.5/jqc-1.11.3,dt-1.10.8/datatables.min.js"></script>
+  <script type="text/javascript" charset="utf-8">
+      $(document).ready(function() {
+            $('#example').DataTable();
+      } );
+  </script>
 
 <div class="col1">
-  <!-- Column 1 start -->
   <h2>Co-ordinate and Positional Data (Harris 1996 (2010 edition))</h2>
-  <br/>
-   <div id="table">{% render_table coordinates %}</div>
-  <!-- Column 1 end -->
+
+   {% render_table observations %}
+
 </div>
 <br/>
-<div id="footer">
-  <p>From left to right: (All distances in Kpc)
-<br/>
-<br/>
-Cluster identification name; <br/>
-Right ascension and declination in degrees; <br/>
-Galactic longitude and latitude in degrees;  <br/>
-Distance from Sun; <br/>
-Distance from Galactic center, assuming R_0=8.0; <br/>
-Galactic distance components X,Y,Z, in a Sun-centered coordinate system where X points toward Galactic center, Y in direction of Galactic rotation, Z toward North Galactic Pole.  </p>
-</div>
+
+<script type="text/javascript">
+    // For demo to fit into DataTables site builder...
+    $('#example')
+        .removeClass( 'display' )
+        .addClass('table table-striped table-bordered');
+</script>
 
 {% endblock %}
