--- a/catalogue/templates/references.html
+++ b/catalogue/templates/references.html
@@ -4,6 +4,7 @@
 {% load staticfiles %}
 {% block content %}
 
+
   <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/r/bs-3.3.5/jq-2.1.4,dt-1.10.8/datatables.min.css"/>
   <script type="text/javascript" src="https://cdn.datatables.net/r/bs-3.3.5/jqc-1.11.3,dt-1.10.8/datatables.min.js"></script>
 <!--
@@ -20,26 +21,16 @@
     } );
 </script>
 
+
+
 <div class="container-fluid">
   <div class="row">
     <div class="col">
-        <h2>Harris 1996 (2010 edition)</h2>
-        {% render_table observations %}
-    </div>
-  </div>
-  <div class="row">
-    <div class="col">
-      1 of 3
-    </div>
-    <div class="col">
-      1 of 3
-    </div>
-    <div class="col">
-      1 of 3
+      <h2>References</h2>
+      <div id="table"> {% render_table references %}</div>
     </div>
   </div>
 </div>
-
 
 <script type="text/javascript">
     // For demo to fit into DataTables site builder...
@@ -47,5 +38,6 @@
         .removeClass( 'display' )
         .addClass('table table-striped table-bordered');
 </script>
+
 
 {% endblock %}
