--- a/catalogue/templates/references.html
+++ b/catalogue/templates/references.html
@@ -3,14 +3,7 @@
 {% load static %}
 {% load staticfiles %}
 {% block content %}
-
-
-  <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/r/bs-3.3.5/jq-2.1.4,dt-1.10.8/datatables.min.css"/>
-  <script type="text/javascript" src="https://cdn.datatables.net/r/bs-3.3.5/jqc-1.11.3,dt-1.10.8/datatables.min.js"></script>
-<!--
-<script type="text/javascript" src="/static/js/datatables.min.js"></script>
-<link rel="stylesheet" type="text/css" href="/static/css/datatables.min.css"/>
-  --!>
+<link rel="stylesheet" type="text/css" href="{% static 'css/datatables.min.css' %}"/>
 <script type="text/javascript" charset="utf-8">
     $(document).ready(function() {
         $('#example').DataTable({
@@ -21,8 +14,6 @@
     } );
 </script>
 
-
-
 <div class="container-fluid">
   <div class="row">
     <div class="col">
@@ -32,12 +23,11 @@
   </div>
 </div>
 
+<script type="text/javascript" src="{% static 'js/datatables.min.js' %}"></script>
 <script type="text/javascript">
     // For demo to fit into DataTables site builder...
     $('#example')
         .removeClass( 'display' )
         .addClass('table table-striped table-bordered');
 </script>
-
-
 {% endblock %}
