--- a/catalogue/templates/base.html
+++ b/catalogue/templates/base.html
@@ -6,48 +6,63 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-GB">
 <head id="head">
   <title>Surrey GC archive</title>
+  <link rel="shortcut icon" href="//www.surrey.ac.uk/sites/all/themes/surrey_theme/favicon.ico" type="image/x-icon" />
   <meta http-equiv="Content-Type" content="application/xhtml+xml; charset=utf-8" />
   <meta name="description" content=""/>
   <meta name="keywords" content="" />
   <meta name="robots" content="index, follow" />
-  {% bootstrap_styles theme='default' type='min.css' %}
-  {% bootstrap_script use_min=True %}
-  <link rel="stylesheet" type="text/css" href="{% static 'screen.css' %}">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <!-- Bootstrap core CSS -->
+  <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+  <!-- Custom styles for this template -->
+  <link href="{% static 'css/custom.css' %}" rel="stylesheet">
+
+  <!-- Bootstrap core JavaScript
+  ================================================== -->
+  <!-- Placed at the end of the document so the pages load faster -->
+  <script src="{% static 'js/jquery-3.3.1.slim.min.js' %}"></script>
+  <!-- <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js %}"><\/script>')</script> --!>
+  <script src="{% static 'js/tether.min.js' %}"></script>
+  <script src="{% static 'js/bootstrap.min.js' %}"></script>
+  <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+  <script src="{% static 'js/ie10-viewport-bug-workaround.js' %}"></script>
+
+
+
 </head>
-
 <body>
-<!-- Fixed navbar -->
-<nav class="navbar navbar-default navbar-inverse">
-  <div class="container">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
+    <nav class="navbar navbar-toggleable-md navbar-inverse bg-inverse fixed-top">
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
       </button>
-      <a class="navbar-brand" href="#">SupaHarris</a>
-    </div>
-    <div id="navbar" class="navbar-collapse collapse">
-      <ul class="nav navbar-nav">
+      <a class="navbar-brand" href="#">SuperHarris</a>
 
-        <li><a href="/catalogue/">Home</a></li>
-        <li class="{% if request.resolver_match.url_name == "index" %}active{% endif %}">
-          <a href="{% url "index" %}">Catalogue</a>
+      <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item"><a class="nav-link" href="/catalogue/">Home</a></li>
+        <li class="nav-item {% if request.resolver_match.url_name == "index" %}active{% endif %}">
+          <a class="nav-link" href="{% url "index" %}">Catalogue</a>
         </li>
 
-        <li class="{% if request.resolver_match.url_name == "references" %}active{% endif %}">
-          <a href="{% url "references" %}">References</a>
+        <li class="nav-item {% if request.resolver_match.url_name == "references" %}active{% endif %}">
+          <a class="nav-link" href="{% url "references" %}">References</a>
         </li>
-
-        <li class="{% if request.resolver_match.url_name == "about" %}active{% endif %}">
-          <a href="{% url "about" %}">About</a>
+        <li class="nav-item">
+          <a class="nav-link disabled" href="#">New feature</a>
+        </li>
+        <li class="nav-item {% if request.resolver_match.url_name == "about" %}active{% endif %}">
+          <a class="nav-link" href="{% url "about" %}">About</a>
         </li>
       </ul>
+      </div>
+    </nav>
+
+    <div class="container">
+    <div class="starter-template">
+     <h1>Surrey Globular Cluster Catalogue</h1>
+     <p class="lead">A dynamic high-level catalogue hosting the properties of Milky Way Globular Clusters</p>
     </div>
-  </div>
-</nav>
+
+    </div>
 
 {% block content %}{% endblock %}
 
