--- a/apps/catalogue/templates/catalogue/cluster_list.html
+++ b/apps/catalogue/templates/catalogue/cluster_list.html
@@ -1,5 +1,31 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
+{% load render_table from django_tables2 %}
+{% load static %}
+
+{% block stylesheets %} {{ block.super }}
+    <link rel="stylesheet" type="text/css" href="{% static 'catalogue/css/datatables.min.css' %}"/>
+{% endblock stylesheets %}
 
 {% block content %}
-TODO: implement cluster_list
-{% endblock content %}
+<div class="container-fluid">
+    <h2>Harris 1996 (2010 edition)</h2>
+    {% render_table observations %}
+</div>
+{% endblock %}
+
+{% block bottomscripts %} {{ block.super }}
+    <script charset="utf8" type="text/javascript" src="{% static 'catalogue/js/datatables.min.js' %}"></script>
+    <script type="text/javascript" charset="utf-8">
+        $(document).ready(function() {
+            $('#example').DataTable({
+              "pageLength": 50,
+              "dom": '<"top"iflp<"clear">>rt<"bottom"iflp<"clear">>', 
+              "order": [[ 2, "asc" ]],
+            } );
+        } );
+    </script>
+    <script type="text/javascript">
+        $('#example')
+            .addClass('display compact table-striped table-bordered');
+    </script>
+{% endblock bottomscripts %}
