Added accounts app, but as of yet without any front-end

--- a/templates/header.html
+++ b/templates/header.html
@@ -19,6 +19,15 @@
                 <li class="nav-item {% if request.resolver_match.url_name == "about" %}active{% endif %}">
                     <a class="nav-link" href="{% url "about:info" %}">About</a>
                 </li>
+                {% if request.user.is_authenticated %}
+                <li class="nav-item {% if request.resolver_match.url_name == "accounts" %}active{% endif %}">
+                    <a class="nav-link" href="{% url "accounts:profile" %}">Account</a>
+                </li>
+                {% else %}
+                <li class="nav-item {% if request.resolver_match.url_name == "accounts" %}active{% endif %}">
+                    <a class="nav-link" href="{% url "accounts:create" %}">Account</a>
+                </li>
+                {% endif %}
             </ul>
         </div>
     </nav>
