Drop some Bokeh example plot

--- a/apps/about/templates/about/index.html
+++ b/apps/about/templates/about/index.html
@@ -7,9 +7,13 @@
 <div class="col1">
   <!-- Column 1 start -->
   <center>
-  {{ figure|safe }}
+      {{ fig_div | safe }}
   </center>
 
 </div>
 
 {% endblock %}
+
+{% block bottomscripts %} {{ block.super }}
+    {{ fig_script | safe }}
+{% endblock bottomscripts %}
