--- a/apps/accounts/templates/accounts/profile.html
+++ b/apps/accounts/templates/accounts/profile.html
@@ -6,9 +6,7 @@
   <div class="row">
     <div class="col">
       <div class="jumbotron">
-      <h2>About</h2>
-      <p> This is a high-level catalogue of globular cluster properties and some
-      selected ancillary catalogues. </p>
+      <h2>Profile</h2>
       </div>
     </div>
   </div>
