Add DH as author

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,8 +9,8 @@
     <meta name="robots" content="index, follow" /> 
     <meta charset="utf8"/>
 
-    <meta name="author" content="Timo Halbesma, Eduardo Balbinot"/>
-    <meta name="copyright" content="Timo Halbesma, Eduardo Balbinot" />
+    <meta name="author" content="Timo Halbesma, Eduardo Balbinot, David Hendriks"/>
+    <meta name="copyright" content="Timo Halbesma, Eduardo Balbinot, David Hendriks" />
 
     <link rel="apple-touch-icon" href="{% static 'img/favicon.png' %}">
     <link rel="shortcut icon" href="{% static 'img/favicon.ico' %}" type="image/x-icon" />
