--- a/templates/header.html
+++ b/templates/header.html
@@ -1,33 +1,29 @@
-    <nav class="navbar navbar-expand navbar-dark bg-dark">
-        <a class="navbar-brand" href="{% url 'about:index' %}">SupaHarris</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" 
-                data-target="#nav-main" aria-controls="nav-main" 
-                aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="nav-main">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item {% if request.resolver_match.url_name == "index" %}active{% endif %}">
-                    <a class="nav-link" href="{% url "catalogue:cluster_list" %}">Catalogue</a>
-                </li>
-                <li class="nav-item {% if request.resolver_match.url_name == "references" %}active{% endif %}">
-                    <a class="nav-link" href="{% url "catalogue:reference_list" %}">References</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled" href="#">New feature</a>
-                </li>
-                <li class="nav-item {% if request.resolver_match.url_name == "about" %}active{% endif %}">
-                    <a class="nav-link" href="{% url "about:info" %}">About</a>
-                </li>
-                {% if request.user.is_authenticated %}
-                <li class="nav-item {% if request.resolver_match.url_name == "accounts" %}active{% endif %}">
-                    <a class="nav-link" href="{% url "accounts:profile" %}">Account</a>
-                </li>
-                {% else %}
-                <li class="nav-item {% if request.resolver_match.url_name == "accounts" %}active{% endif %}">
-                    <a class="nav-link" href="{% url "accounts:create" %}">Account</a>
-                </li>
-                {% endif %}
-            </ul>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
+        <div class="container">
+            <a class="navbar-brand" href="{% url 'index' %}">SupaHarris</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item {% if request.resolver_match.url_name == "catalogue" %}active{% endif %}">
+                        <a class="nav-link" href="{% url "catalogue:cluster_list" %}">Catalogue</a>
+                    </li>
+                    <li class="nav-item {% if request.resolver_match.url_name == "references" %}active{% endif %}">
+                        <a class="nav-link" href="{% url "catalogue:reference_list" %}">References</a>
+                    </li>
+                    <li class="nav-item {% if request.resolver_match.url_name == "about" %}active{% endif %}">
+                        <a class="nav-link" href="{% url "about:info" %}">About</a>
+                    </li>
+                    {% if request.user.is_authenticated %}
+                    <li class="nav-item {% if request.resolver_match.url_name == "accounts" %}active{% endif %}">
+                        <a class="nav-link" href="{% url "accounts:profile" %}">Account</a>
+                    </li>
+                    {% else %}
+                    <li class="nav-item {% if request.resolver_match.url_name == "accounts" %}active{% endif %}">
+                    </li>
+                    {% endif %}
+                </ul>
+            </div>
         </div>
     </nav>
