--- a/apps/catalogue/templates/catalogue/index.html
+++ b/apps/catalogue/templates/catalogue/index.html
@@ -2,11 +2,8 @@
 {% load static %}
 
 {% block content %}
-<div class="col1">
-  <center>
-      {{ fig_div | safe }}
-  </center>
-
+<div class="mx-auto">
+    {{ fig_div | safe }}
 </div>
 {% endblock %}
 
