Inserted the template into our structure. Then get the data from our API and insert it into DataTables

--- a/apps/catalogue/templates/catalogue/index.html
+++ b/apps/catalogue/templates/catalogue/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% block content %}
+{% block content %} {{ block.super }}
 <div class="mx-auto">
     {{ fig_div | safe }}
 </div>
