--- a/apps/catalogue/templates/catalogue/cluster_list.html
+++ b/apps/catalogue/templates/catalogue/cluster_list.html
@@ -5,10 +5,39 @@
 {% endblock stylesheets %}
 
 {% block content %}
-<div class="container-fluid">
-    <h2>Harris 1996 (2010 edition)</h2>
-</div>
+        <div class="card mb-3">
+          <div class="card-header">
+            <i class="fas fa-table"></i>
+            Globular Clusters</div>
+          <div class="card-body">
+            <div class="table-responsive">
+              <table class="table table-bordered" id="globularClusters" width="100%" cellspacing="0">
+                <thead>
+                  <tr>
+                    <th>name</th>
+                    <th>slug</th>
+                    <th>altname</th>
+                  </tr>
+                </thead>
+                <tfoot>
+                  <tr>
+                    <th>name</th>
+                    <th>slug</th>
+                    <th>altname</th>
+                  </tr>
+                </tfoot>
+                <tbody id="globularClusterRow">
+                </tbody>
+              </table>
+            </div>
+          </div>
+          <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
+        </div>
+
+
+
 {% endblock %}
 
 {% block bottomscripts %} {{ block.super }}
+    <script type="text/javascript" src="{% static 'catalogue/js/cluster_list.js' %}"></script>
 {% endblock bottomscripts %}
