Table with references

--- a/apps/catalogue/templates/catalogue/cluster_list.html
+++ b/apps/catalogue/templates/catalogue/cluster_list.html
@@ -11,7 +11,7 @@
             Globular Clusters</div>
           <div class="card-body">
             <div class="table-responsive">
-              <table class="table table-bordered" id="globularClusters" width="100%" cellspacing="0">
+              <table class="table table-bordered" id="clusters" width="100%" cellspacing="0">
                 <thead>
                   <tr>
                     <th>name</th>
@@ -26,16 +26,11 @@
                     <th>altname</th>
                   </tr>
                 </tfoot>
-                <tbody id="globularClusterRow">
-                </tbody>
               </table>
             </div>
           </div>
           <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
         </div>
-
-
-
 {% endblock %}
 
 {% block bottomscripts %} {{ block.super }}
