--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -25,7 +25,7 @@
       <li class="nav-item">
         <a class="nav-link" href="{% url 'catalogue:cluster_list' %}">
           <i class="fas fa-fw fa-chart-area"></i>
-          <span>Catalogue</span></a>
+          <span>Globular Clusters</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="{% url 'catalogue:reference_list' %}">
