--- a/apps/catalogue/templates/catalogue/reference_list.html
+++ b/apps/catalogue/templates/catalogue/reference_list.html
@@ -1,18 +1,39 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% block topscripts %}
-{% endblock topscripts %}
+{% block stylesheets %} {{ block.super }}
+{% endblock stylesheets %}
 
 {% block content %}
-<div class="container-fluid">
-  <div class="row">
-    <div class="col">
-      <h2>References</h2>
-    </div>
-  </div>
-</div>
-{% endblock content %}
+        <div class="card mb-3">
+          <div class="card-header">
+            <i class="fas fa-table"></i>
+            References</div>
+          <div class="card-body">
+            <div class="table-responsive">
+              <table class="table table-bordered" id="references" width="100%" cellspacing="0">
+                <thead>
+                  <tr>
+                    <th>bib_code</th>
+                    <th>ads_url</th>
+                  </tr>
+                </thead>
+                <tfoot>
+                  <tr>
+                    <th>bib_code</th>
+                    <th>ads_url</th>
+                  </tr>
+                </tfoot>
+                <tbody id="globularClusterRow">
+                </tbody>
+              </table>
+            </div>
+          </div>
+          <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
+        </div>
+{% endblock %}
 
-{% block bottomscripts %}
+{% block bottomscripts %} {{ block.super }}
+    <script type="text/javascript" src="{% static 'catalogue/js/reference_list.js' %}"></script>
 {% endblock bottomscripts %}
+
