--- a/apps/catalogue/templates/catalogue/reference_detail.html
+++ b/apps/catalogue/templates/catalogue/reference_detail.html
@@ -1,5 +1,48 @@
 {% extends 'base.html' %}
+{% load static %}
+
+{% block breadcrumbs %}
+  <!-- Breadcrumbs-->
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item">
+      <a href="{% url 'index' %}">Home</a>
+    </li>
+    <li class="breadcrumb-item">
+      <a href="{% url 'catalogue:reference_list' %}">References</a>
+    </li>
+    <li class="breadcrumb-item active">{{ reference.slug }}</li>
+  </ol>
+{% endblock breadcrumbs %}
 
 {% block content %}
-TODO: implement reference_detail
+<div class="card mb-3">
+  <div class="card-header">
+    <i class="fas fa-book-open"></i>
+    {{ reference.slug }}</div>
+  <div class="card-body">
+    <div class="table-responsive">
+      <table class="table table-bordered" id="clusters" width="100%" cellspacing="0">
+        <thead>
+          <tr>
+            <th>name</th>
+            <th>slug</th>
+            <th>altname</th>
+          </tr>
+        </thead>
+        <tfoot>
+          <tr>
+            <th>name</th>
+            <th>slug</th>
+            <th>altname</th>
+          </tr>
+        </tfoot>
+      </table>
+    </div>
+  </div>
+  <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
+</div>
 {% endblock content %}
+
+{% block bottomscripts %} {{ block.super }}
+    <script type="text/javascript" src="{% static 'catalogue/js/reference_detail.js' %}"></script>
+{% endblock bottomscripts %}
