Use django-environ for settings from .env file

--- a/templates/base.html
+++ b/templates/base.html
@@ -67,10 +67,9 @@
       {% block breadcrumbs %}
         <!-- Breadcrumbs-->
         <ol class="breadcrumb">
-          <li class="breadcrumb-item">
-            <a href="#">Dashboard</a>
+          <li class="breadcrumb-item active">
+            <a href="{% url 'index' %}">Home</a>
           </li>
-          <li class="breadcrumb-item active">Overview</li>
         </ol>
       {% endblock breadcrumbs %}
 
