--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -1,11 +1,5 @@
     <!-- Sidebar -->
     <ul class="sidebar navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="{% url 'index' %}">
-          <i class="fas fa-fw fa-tachometer-alt"></i>
-          <span>Home</span>
-        </a>
-      </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="pagesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           <i class="fas fa-fw fa-folder"></i>
@@ -13,23 +7,19 @@
         </a>
         <div class="dropdown-menu" aria-labelledby="pagesDropdown">
           <h6 class="dropdown-header">Login Screens:</h6>
-          <a class="dropdown-item" href="login.html">Login</a>
-          <a class="dropdown-item" href="register.html">Register</a>
-          <a class="dropdown-item" href="forgot-password.html">Forgot Password</a>
-          <div class="dropdown-divider"></div>
-          <h6 class="dropdown-header">Other Pages:</h6>
-          <a class="dropdown-item" href="404.html">404 Page</a>
-          <a class="dropdown-item" href="blank.html">Blank Page</a>
+          <a class="dropdown-item" href="{% url 'accounts:login' %}">Login</a>
+          <a class="dropdown-item" href="{% url 'accounts:register' %}">Register an Account</a>
+          <a class="dropdown-item" href="{% url 'accounts:password_reset' %}">Forgot Password</a>
         </div>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="{% url 'catalogue:cluster_list' %}">
-          <i class="fas fa-fw fa-chart-area"></i>
+          <i class="fas fa-star"></i>
           <span>Globular Clusters</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="{% url 'catalogue:reference_list' %}">
-          <i class="fas fa-fw fa-table"></i>
+          <i class="fas fa-book-open"></i>
           <span>References</span></a>
       </li>
     </ul>
