Near full functionality in the template

--- a/apps/about/templates/about/info.html
+++ b/apps/about/templates/about/info.html
@@ -1,16 +1,24 @@
 {% extends "base.html" %}
 {% load static %}
 
+{% block breadcrumbs %}
+  <!-- Breadcrumbs-->
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item">
+      <a href="{% url 'index' %}">Home</a>
+    </li>
+    <li class="breadcrumb-item active">About</li>
+  </ol>
+{% endblock breadcrumbs %}
+
 {% block content %}
-<div class="container">
-  <div class="row">
-    <div class="col">
-      <div class="jumbotron">
-      <h2>About</h2>
-      <p> This is a high-level catalogue of globular cluster properties and some
-      selected ancillary catalogues. </p>
-      </div>
-    </div>
+<div class="card mb-3">
+  <div class="card-header">
+    <i class="fas fa-fw fa-user"></i>
+    About</div>
+  <div class="card-body">
+      Some information
   </div>
+  <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
 </div>
 {% endblock %}
