--- a/apps/accounts/templates/accounts/password_reset_confirm.html
+++ b/apps/accounts/templates/accounts/password_reset_confirm.html
@@ -6,44 +6,55 @@
     <li class="breadcrumb-item">
       <a href="{% url 'index' %}">Home</a>
     </li>
-    <li class="breadcrumb-item active">New password</li>
+    {% if validlink %}
+    <li class="breadcrumb-item active">Reset password</li>
+    {% else %}
+    <li class="breadcrumb-item">
+      <a href="{% url 'accounts:password_reset' %}">Reset password</a>
+    </li>
+    <li class="breadcrumb-item active">Invalid link</li>
+    {% endif %}
   </ol>
 {% endblock breadcrumbs %}
 
 {% block content %}
   <div class="container">
     <div class="card card-login mx-auto mt-5 mb-3">
-      <div class="card-header">Login</div>
+    {% if validlink %}
+      <div class="card-header">Reset password}</div>
       <div class="card-body">
 
-        {% if validlink %}
+        {{ form.new_password1.errors }}
+        {{ form.new_password2.errors }}
+
         <form method="post" action="">
         {% csrf_token %}
-
           <div class="form-group">
             <div class="form-label-group">
-              {{ form.new_password1.errors }}
-              <input type="password" id="id_new_password1" class="form-control" placeholder="Password" required="required">
+              <input type="password" id="id_new_password1" name="new_password1" class="form-control" placeholder="Password" required="required">
               <label for="id_new_password1">New password</label>
             </div>
           </div>
 
           <div class="form-group">
             <div class="form-label-group">
-              {{ form.new_password2.errors }}
-              <input type="password" id="id_new_password2" class="form-control" placeholder="Password" required="required">
+              <input type="password" id="id_new_password2" name="new_password2" class="form-control" placeholder="Password" required="required">
               <label for="id_new_password2">Confirm password</label>
             </div>
           </div>
+
           <input class="btn btn-primary btn-block" type="submit" value="Change my password">
         </form>
-        {% else %}
-            <h1>Password reset failed</h1>
-            <p>The password reset link was invalid, possibly because it has already been used. 
-            Please <a href="{% url 'accounts:password_reset' %}">request a new password reset.</a> link and try again.
-            Our reset tokens are valid for approximately three days. </p>
-        {% endif %}
       </div>
     </div>
+    {% else %}
+      <div class="card-header">Reset password: invalid link</div>
+      <div class="card-body">
+         The password reset link was invalid, possibly because it has already been used. 
+          Please <a href="{% url 'accounts:password_reset' %}">request a new password reset.</a> link and try again.
+          Our reset tokens should be valid for approximately three days. </p>
+      </div>
+    </div>
+    {% endif %}
   </div>
 {% endblock %}
