--- a/apps/catalogue/templates/catalogue/reference_detail.html
+++ b/apps/catalogue/templates/catalogue/reference_detail.html
@@ -17,7 +17,7 @@
 {% block content %}
 <div class="card mb-3">
   <div class="card-header">
-    <i class="fas fa-book-open"></i>
+    <i class="fas fa-fw fa-book-open"></i>
     {{ reference.slug }}</div>
   <div class="card-body">
     <div class="table-responsive">
