--- a/apps/accounts/templates/accounts/login.html
+++ b/apps/accounts/templates/accounts/login.html
@@ -34,13 +34,13 @@
 
           <div class="form-group">
             <div class="form-label-group">
-              <input type="email" id="id_username" class="form-control" placeholder="Email address" required="required" autofocus="autofocus">
+              <input type="email" id="id_username" name="username" class="form-control" placeholder="Email address" required="required" autofocus="autofocus">
               <label for="id_username">Email address</label>
             </div>
           </div>
           <div class="form-group">
             <div class="form-label-group">
-              <input type="password" id="id_password" class="form-control" placeholder="Password" required="required">
+              <input type="password" id="id_password" name="password" class="form-control" placeholder="Password" required="required">
               <label for="id_password">Password</label>
             </div>
           </div>
@@ -58,8 +58,8 @@
 
         </form>
         <div class="text-center">
-          <a class="d-block small mt-3" href="{% url 'accounts:register' %}">Register an Account</a>
-          <a class="d-block small" href="{% url 'accounts:password_reset' %}">Forgot Password?</a>
+          <a class="d-block small mt-3" href="{% url 'accounts:register' %}">Create an account</a>
+          <a class="d-block small" href="{% url 'accounts:password_reset' %}">Forgot password?</a>
         </div>
       </div>
     </div>
