--- a/apps/accounts/templates/accounts/password_reset_form.html
+++ b/apps/accounts/templates/accounts/password_reset_form.html
@@ -36,8 +36,8 @@
           <input type="submit" class="btn btn-primary btn-block" value="Reset Password">
         </form>
         <div class="text-center">
-          <a class="d-block small mt-3" href="{% url 'accounts:register' %}">Register an Account</a>
-          <a class="d-block small" href="{% url 'accounts:login' %}">Login Page</a>
+          <a class="d-block small mt-3" href="{% url 'accounts:register' %}">Create an account</a>
+          <a class="d-block small" href="{% url 'accounts:login' %}">Login</a>
         </div>
       </div>
     </div>
