--- a/apps/catalogue/templates/catalogue/cluster_list.html
+++ b/apps/catalogue/templates/catalogue/cluster_list.html
@@ -17,7 +17,7 @@
 {% block content %}
 <div class="card mb-3">
   <div class="card-header">
-    <i class="fas fa-star"></i>
+    <i class="fas fa-fw fa-star"></i>
     Globular Clusters</div>
   <div class="card-body">
     <div class="table-responsive">
