--- a/templates/base.html
+++ b/templates/base.html
@@ -87,7 +87,7 @@
               <a class="card-footer text-white clearfix small z-1" href="#">
                 <span class="float-left">View Details</span>
                 <span class="float-right">
-                  <i class="fas fa-angle-right"></i>
+                  <i class="fas fa-fw fa-angle-right"></i>
                 </span>
               </a>
             </div>
@@ -103,7 +103,7 @@
               <a class="card-footer text-white clearfix small z-1" href="#">
                 <span class="float-left">View Details</span>
                 <span class="float-right">
-                  <i class="fas fa-angle-right"></i>
+                  <i class="fas fa-fw fa-angle-right"></i>
                 </span>
               </a>
             </div>
@@ -119,7 +119,7 @@
               <a class="card-footer text-white clearfix small z-1" href="#">
                 <span class="float-left">View Details</span>
                 <span class="float-right">
-                  <i class="fas fa-angle-right"></i>
+                  <i class="fas fa-fw fa-angle-right"></i>
                 </span>
               </a>
             </div>
@@ -135,7 +135,7 @@
               <a class="card-footer text-white clearfix small z-1" href="#">
                 <span class="float-left">View Details</span>
                 <span class="float-right">
-                  <i class="fas fa-angle-right"></i>
+                  <i class="fas fa-fw fa-angle-right"></i>
                 </span>
               </a>
             </div>
@@ -181,7 +181,7 @@
         <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
         <div class="modal-footer">
           <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-          <a class="btn btn-primary" href="login.html">Logout</a>
+          <a class="btn btn-primary" href="{% url 'accounts:logout' %}">Logout</a>
         </div>
       </div>
     </div>
