--- a/apps/about/templates/about/info.html
+++ b/apps/about/templates/about/info.html
@@ -14,7 +14,7 @@
 {% block content %}
 <div class="card mb-3">
   <div class="card-header">
-    <i class="fas fa-fw fa-user"></i>
+    <i class="fas fa-fw fa-info"></i>
     About</div>
   <div class="card-body">
       Some information
