--- a/apps/accounts/templates/accounts/register.html
+++ b/apps/accounts/templates/accounts/register.html
@@ -16,39 +16,37 @@
       <div class="card-header">Register</div>
       <div class="card-body">
           
-        {% if form.errors %}
-        <p>Your username and password didn't match. Please try again.</p>
+        {% if form.email.errors %}
+        <div class="alert alert-danger" role="alert">
+          {{ form.email.errors|striptags }}
+        </div>
+        {% endif %}
+        {% if form.password2.errors %}
+        <div class="alert alert-danger" role="alert">
+          {{ form.password2.errors|striptags }}
+        </div>
         {% endif %}
 
-        {% if next %}
-            {% if user.is_authenticated %}
-            <p>Your account doesn't have access to this page. To proceed,
-            please login with an account that has access.</p>
-            {% else %}
-            <p>Please login to see this page.</p>
-            {% endif %}
-        {% endif %}
-
-        <form method="post" action="">
+        <form method="post" action="" enctype="multipart/form-data">
         {% csrf_token %}
 
           <div class="form-group">
             <div class="form-label-group">
-              <input type="email" id="id_username" name="username" class="form-control" placeholder="Email address" required="required" autofocus="autofocus">
-              <label for="id_username">Email address</label>
+              <input type="email" id="id_email" name="email" class="form-control" placeholder="Email address" required="required" autofocus="autofocus">
+              <label for="id_email">Email address</label>
             </div>
           </div>
 
           <div class="form-group">
             <div class="form-label-group">
-              <input type="password" id="id_password1" name="password1" class="form-control" placeholder="Password" required="required" autofocus="autofocus">
+              <input type="password" id="id_password1" name="password1" class="form-control" placeholder="Password" required="required">
               <label for="id_password1">Password</label>
             </div>
           </div>
 
           <div class="form-group">
             <div class="form-label-group">
-              <input type="password" id="id_password2" name="password2" class="form-control" placeholder="Password" required="required" autofocus="autofocus">
+              <input type="password" id="id_password2" name="password2" class="form-control" placeholder="Password" required="required">
               <label for="id_password2">Confirm password</label>
             </div>
           </div>
@@ -63,7 +61,6 @@
           </div>
 
           <input class="btn btn-primary btn-block" type="submit" value="Submit">
-          <input type="hidden" name="next" value="{{ next }}">
         </form>
         <div class="text-center">
           <a class="d-block small mt-3" href="{% url 'accounts:password_reset' %}">Forgot password?</a>
