Inform the user to which email address a password reset has been sent

--- a/apps/accounts/templates/accounts/password_reset_done.html
+++ b/apps/accounts/templates/accounts/password_reset_done.html
@@ -18,9 +18,9 @@
     <div class="card card-login mx-auto mt-5 mb-3">
         <div class="card-header">Email sent!</div>
         <div class="card-body">
-            {{ form }}
-            We've emailed instructions for setting your password to {{ hank }}. 
-            If they haven't arrived in a few minutes, check your spam folder.
+            We've emailed instructions for resetting your password to <strong>{{ request.session.password_reset_email }}</strong>.
+            If the email does not arive within the next few minutes, check your spam folder. If you still cannot find
+            the email, please contact us.
         </div>
     </div>
 </div>
