--- a/apps/catalogue/templates/catalogue/reference_list.html
+++ b/apps/catalogue/templates/catalogue/reference_list.html
@@ -24,16 +24,16 @@
       <table class="table table-bordered" id="references" width="100%" cellspacing="0">
         <thead>
           <tr>
-            <th>bib_code</th>
-            <th>slug</th>
-            <th>ads_url</th>
+            <th>Reference</th>
+            <th>Title</th>
+            <th>External URL</th>
           </tr>
         </thead>
         <tfoot>
           <tr>
-            <th>bib_code</th>
-            <th>slug</th>
-            <th>ads_url</th>
+            <th>Reference</th>
+            <th>Title</th>
+            <th>External URL</th>
           </tr>
         </tfoot>
         <tbody id="globularClusterRow">
