--- a/apps/catalogue/templates/catalogue/cluster_list.html
+++ b/apps/catalogue/templates/catalogue/cluster_list.html
@@ -24,16 +24,14 @@
       <table class="table table-bordered" id="clusters" width="100%" cellspacing="0">
         <thead>
           <tr>
-            <th>name</th>
-            <th>slug</th>
-            <th>altname</th>
+            <th>Name</th>
+            <th>Alias</th>
           </tr>
         </thead>
         <tfoot>
           <tr>
-            <th>name</th>
-            <th>slug</th>
-            <th>altname</th>
+            <th>Name</th>
+            <th>Alias</th>
           </tr>
         </tfoot>
       </table>
